P4ADEV-3337 add test for coverage